# check-point-waf-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/checkpoint_waf_mcp/: __init__.py  auth.py  graphql_client.py  server.py
