[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "checkpoint-waf-mcp"
version = "0.1.0"
description = "MCP server for Check Point WAF management"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Check Point Software Technologies" },
]
keywords = ["mcp", "checkpoint", "waf", "graphql"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
checkpoint-waf-mcp = "checkpoint_waf_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/checkpoint_waf_mcp"]
